.devcontainer/CODE/index.css
h2 {
    font-family: 'Arial Narrow Bold', sans-serif;
    font-weight: bold;
}

h3 {
    font-family: 'Arial Narrow Bold', sans-serif;
}

p {
    font-family: 'Grandiflora One', cursive;
    font-size: large;
}

.btn {
    background-color: #000;
}

/* Social Icons */

.social-icons {
size-adjust: 10em;
color: black;
}


.fa-twitter {
    color: pink;
}

/* Nav Bar  */
.nav-item {
    font-family: 'Grandiflora One', cursive;
    font-weight: 1000;
    font-size: large;
}


/* Palette Section */

.palette-title {
    text-align: center;
}

.palette-list {
    font-family: 'Grandiflora One', cursive;
    font-size: large;
}

#contact-form {align-content: center;}

